src/assets/styles/App.css
:root {
  --primary-blue: #215184;
  --font-color: #545454;
  --font-family: 'Brandon Grotesque', Arial, Helvetica, sans-serif;
}

body {
  /* font-family: var(--font-family); */
  color: var(--font-color);
}

@font-face {
  font-family: 'Brandon Grotesque';
  src: url('../fonts/BrandonGrotesque-Bold.woff2') format('woff2'),
      url('../fonts/BrandonGrotesque-Bold.woff') format('woff'),
      url('../fonts/BrandonGrotesque-Bold.ttf') format('truetype');
  font-weight: bold;
  font-style: normal;
}

@font-face {
  font-family: 'Brandon Grotesque';
  src: url('../fonts/BrandonGrotesque-Regular.woff2') format('woff2'),
      url('../fonts/BrandonGrotesque-Regular.woff') format('woff'),
      url('../fonts/BrandonGrotesque-Regular.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Brandon Grotesque';
  src: url('../fonts/BrandonGrotesque-RegularItalic.woff2') format('woff2'),
      url('../fonts/BrandonGrotesque-RegularItalic.woff') format('woff'),
      url('../fonts/BrandonGrotesque-RegularItalic.ttf') format('truetype');
  font-weight: normal;
  font-style: italic;
}

@font-face {
  font-family: 'Brandon Grotesque';
  src: url('../fonts/BrandonGrotesque-Black.woff2') format('woff2'),
      url('../fonts/BrandonGrotesque-Black.woff') format('woff'),
      url('../fonts/BrandonGrotesque-Black.ttf') format('truetype');
  font-weight: 900;
  font-style: normal;
}

@font-face {
  font-family: 'Brandon Grotesque';
  src: url('../fonts/BrandonGrotesque-Medium.woff2') format('woff2'),
      url('../fonts/BrandonGrotesque-Medium.woff') format('woff'),
      url('../fonts/BrandonGrotesque-Medium.ttf') format('truetype');
  font-weight: 500;
  font-style: normal;
}


.logo_div {
  display: inline;
  max-width: 20vw;
}

.spacex_logo {
  max-height: 22px;
}

.logo_text {
  display: inline;
  font-family: "Brandon Grotesque";
  font-weight: normal;
  font-style: normal;
  font-size: 20px;
}

.launch_img {
  position: fixed;
  padding-top: 10vh;
  max-height: 80vh;
}

.list_loading {
  color: var(--font-color);
  font-family: "Brandon Grotesque";
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  float: left;
}

button, select {
  background-color: var(--primary-blue);
  color: white;
  min-height: 30px;
  font-family: "Brandon Grotesque";
  font-weight: bold;
  font-style: normal;
  font-size: 16px;
}

.reload_button {
  position: fixed;
  top: 5vh;
  right: 0px;
  min-width: 134px;
  border-top-left-radius: 50px;
  border-bottom-left-radius: 50px;
}

.year_filter {
  position: fixed;
  top: 10vh;
  right: 20vw;
  min-width: 144px;
  padding-right: 10px;
}

.sort_button {
  position: fixed;
  top: 10vh;
  right: 10vw;
  min-width: 156px;
  padding-left: 10px;
}

.container {
  position: absolute;
  top: 20vh;
  max-height: 80vh;
  right: 10vw;
  overflow: scroll;
}

ul {
  list-style-type: none;
}

.list_element {
  min-width: 40vw;
  height: 70px;
  border: 1px solid lightgrey;
  box-shadow: 1px 1px 1px lightgrey;
  border-radius: 10px;
  margin-bottom: 10px;
}

.flight_number, .mission_name {
  display: inline-block;
}

.list_item_container_left, .list_item_container_right {
  display: inline-block;
}

.list_item_container_left {
  padding-left: 15px;
}

.list_item_container_right {
  float: right;
  padding-right: 15px;
}

.flight_number {
  padding-right: 15px;
  font-family: "Brandon Grotesque";
  font-weight: 500;
  font-style: normal;
  font-size: 40px;
  margin-top: 5px;
  padding-top: 0px;
}

.mission_name {
  font-family: "Brandon Grotesque";
  font-weight: 500;
  font-style: normal;
  font-size: 32px;
  margin-top: 5px;
  padding-top: 0px;
}



.launch_date {
  font-family: "Brandon Grotesque";
  font-weight: normal;
  font-style: normal;
  font-size: 16px;
  margin-top: 5px;
  padding-top: 0px;
  margin-bottom: 0px;
}

.rocket_name {
  font-family: "Brandon Grotesque";
  font-weight: bold;
  font-style: normal;
  font-size: 24px;
  margin-top: 0px;
  text-align: right;
}

